# asy_rabbitmq

./: CONTRIBUTING.md  README.md  dev.py  docker-compose.yml  pyproject.toml  sample.py
asy_rabbitmq/: __init__.py  app.py  caller.py  cli.py  dependency.py  func.py  mock.py  utils.py
tests/: test_client.py  test_mock.py  test_task.py
