[tool.poetry]
name = "asy_rabbitmq"
version = "0.0.1"
description = ""
authors = ["sasano8 <y-sasahara@ys-method.com>"]
license = "MIT"
readme = "README.md"
# repository = "https://github.com/sasano8/asy"

[tool.poetry.dependencies]
python = "^3.8"
pika = "^1.2.0"
asy = "^0.0.7"
# typer = "^0.3.2"
fastapi = "^0.63.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"
flake8 = "^3.9.0"
mypy = "^0.812"
pytest = "^6.2.2"

# [tool.poetry.extras]
# asy = ["asy"]
# typer = ["typer"][build-system]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
